--- a/installation.dita
+++ b/installation.dita
@@ -24,7 +24,23 @@
 ...</codeblock>
                 <image href="bild237680-resimage_v-variantBig1xN_w-1024.jpg" placement="break"
                     id="image_hd1_lxh_lkb"/>
+                <table conref="overview.dita#concept_ozm_hvh_lkb/table_c5v_fyh_lkb"
+                    id="table_why_5yh_lkb">
+                    <tgroup cols="1">
+                        <tbody>
+                            <row>
+                                <entry/>
+                            </row>
+                        </tbody>
+                    </tgroup>
+                </table>
             </stepsection>
+          <step>
+            <cmd>Put the third tennis ball in your mouth.</cmd>
+            <info>What tennis ball, you ask?
+            <image href="https://image.shutterstock.com/image-photo/tennis-ball-close-isolated-on-260nw-51345988.jpg" placement="break" id="tennis-ball" alt="This one."/>
+            </info>
+          </step>
         </steps>
     </taskbody>
 </task>
