--- a/mapmap.ditamap
+++ b/mapmap.ditamap
@@ -5,7 +5,7 @@
         <?oxy_comment_start author="aproragadozo" timestamp="20200120T145432+0100" comment="Is this correct?"?>not<?oxy_comment_end?>
         a virus</title>
     <?oxy_insert_start author="aproragadozo" timestamp="20200120T145121+0100"?>
-    <topicref id="overview-ref" href="overview.dita" type="concept" format="dita"/>
+    <topicref id="overview-ref" href="overview.dita" type="concept" format="dita" keyref="o-v"/>
     <topicref id="install-ref" href="installation.dita" type="task" format="dita"/>
     <?oxy_insert_end?>
     <topicref><?oxy_delete author="aproragadozo" timestamp="20200120T145101+0100" content="&lt;topicref href=&quot;overview.dita&quot;/&gt;"?></topicref>
