--- a/cekla.dita
+++ b/cekla.dita
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
 <task id="task_ihz_jgd_mkb">
-    <title></title>
-    <shortdesc></shortdesc>
+    <title>Cekla</title>
+    <shortdesc id="cekla-sd">Shortest description.</shortdesc>
     <taskbody>
         <context>
-            <p></p>
+            <p>dfdgjkjhfrew</p>
         </context>
         <steps>
             <step>
-                <cmd></cmd>
+                <cmd>sarfgkhlhjgftrw</cmd>
             </step>
         </steps>
     </taskbody>
