--- a/installation.dita
+++ b/installation.dita
@@ -3,7 +3,7 @@
 <task id="task_kn5_lvh_lkb">
     <title><?oxy_comment_start author="aproragadozo" timestamp="20200120T152337+0100" comment="po-TEI-to or po-TAI-to?"?>Installing<?oxy_comment_end?></title>
     <shortdesc>How to install your Superbest on
-        <?oxy_comment_start author="dombaililla" timestamp="20200123T154914+0000" comment="yet another useful comment"?>Windows<?oxy_comment_end?>.</shortdesc>
+        <?oxy_comment_start author="dombaililla" timestamp="20200123T154914+0000" comment="yet another useful comment" id="dgr_hh2_mkb"?><?oxy_comment_start author="Balázs Bujna" timestamp="20200123T155654+0000" comment="Food for thought." parentID="dgr_hh2_mkb" mid="2"?>Windows<?oxy_comment_end mid="2"?><?oxy_comment_end?>.</shortdesc>
     <taskbody>
         <context>
             <p id="npm">Make sure you have <b>npm</b> installed. Also to match your outfit with your
@@ -26,7 +26,7 @@
 ...</codeblock>
                 <?oxy_comment_start author="aproragadozo" timestamp="20200120T152240+0100" comment="Adding a comment here for no good reason."?>
                 <image href="bild237680-resimage_v-variantBig1xN_w-1024.jpg" placement="break"
-                    id="image_hd1_lxh_lkb"><?oxy_comment_end?></image>
+                    id="image_hd1_lxh_lkb" alt="Angela Mergel"><?oxy_comment_end?></image>
                 <table conref="overview.dita#concept_ozm_hvh_lkb/table_c5v_fyh_lkb"
                     id="table_why_5yh_lkb">
                     <tgroup cols="1">
