playing with the web author

--- a/mapmap.ditamap
+++ b/mapmap.ditamap
@@ -2,11 +2,17 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <title>Totally
-        <?oxy_comment_start author="aproragadozo" timestamp="20200120T145432+0100" comment="Is this correct?" id="dcw_2p2_mkb"?><?oxy_comment_start author="dombaililla" timestamp="20200123T165701+0000" comment="yes" parentID="dcw_2p2_mkb" mid="1"?>not<?oxy_comment_end mid="1"?><?oxy_comment_end?>
+        <?oxy_comment_start author="aproragadozo" timestamp="20200120T145432+0100" comment="Is this correct?" id="dcw_2p2_mkb" mid="1"?><?oxy_comment_start author="dombaililla" timestamp="20200123T165701+0000" comment="yes" parentID="dcw_2p2_mkb"?>not<?oxy_comment_end?><?oxy_comment_end mid="1"?>
         a virus</title>
     <?oxy_insert_start author="aproragadozo" timestamp="20200120T145121+0100" flag="done"?>
     <topicref id="overview-ref" href="overview.dita" type="concept" format="dita" keyref="o-v"/>
+    <?oxy_insert_end?>
+    <?oxy_delete author="dombaililla" timestamp="20200124T125959+0000" content="&lt;topicref href=&quot;nextchapter.dita&quot;/&gt;"?>
+    <?oxy_insert_start author="aproragadozo" timestamp="20200120T145121+0100" flag="done"?>
     <topicref id="install-ref" href="installation.dita" type="task" format="dita"/>
+    <?oxy_insert_end?>
+    <?oxy_insert_start author="dombaililla" timestamp="20200124T125959+0000"?>
+    <topicref href="nextchapter.dita"/>
     <?oxy_insert_end?>
     <topicref><?oxy_delete author="aproragadozo" timestamp="20200120T145101+0100" content="&lt;topicref href=&quot;overview.dita&quot;/&gt;"?></topicref>
 </map>
